--- a/src/gatekeeper/css/gatekeeper_main.css
+++ b/src/gatekeeper/css/gatekeeper_main.css
@@ -1,9 +1,10 @@
 /*
- *  OpenDiamond Gatekeeper
- *  An OpenDiamond application the generation of scoping files
+/*
+ *  The OpenDiamond Platform for Interactive Search
+ *  Version 3
  *
- *  Copyright (c) 2007  Intel Corporation
- *  All Rights Reserved.
+ *  Copyright (c) 2007 Intel Corporation
+ *  All rights reserved.
  *
  *  This software is distributed under the terms of the Eclipse Public
  *  License, Version 1.0 which can be found in the file named LICENSE.
@@ -12,7 +13,7 @@
  */
 
 /*
- *  $Id: gatekeeper_main.css 287 2007-08-22 19:09:34Z rgass $
+ *  $Id:$  
  */
 
 /*  Setup defaults for page  */
