Move define scope button to bottom of the collection list instead of far right.

--- a/src/gatekeeper/css/gatekeeper_main.css
+++ b/src/gatekeeper/css/gatekeeper_main.css
@@ -72,7 +72,7 @@ dl.collapse {
     padding: 3px;
 }
 input[type=submit] {
-    float: right;
+    margin-top: .5em;
 }
 #footer {
     text-align: center;
