scopeserver: Expect base.html template to be in scopeserver subdirectory

--- a/opendiamond/scopeserver/gatekeeper/templates/gatekeeper.html
+++ b/opendiamond/scopeserver/gatekeeper/templates/gatekeeper.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "scopeserver/base.html" %}
 {% block content %}
 {% if request.user.is_staff %}
 <div id="rightbar"><a href="manage.html">Manage Permissions</a></div>
