--- a/opendiamond/scopeserver/gigapan/templates/gigapan_search.html
+++ b/opendiamond/scopeserver/gigapan/templates/gigapan_search.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "scopeserver/base.html" %}
 
 {% block content %}
 <form action="{% url browse %}" method="GET">
