blaster: Improve HTTP error reporting

--- a/opendiamond/blaster/templates/testui/search.html
+++ b/opendiamond/blaster/templates/testui/search.html
@@ -250,7 +250,7 @@ $(function() {
         $('#results').text(data);
       },
       error: function(jqXHR, textStatus, errorThrown) {
-        $('#results').text('Error: ' + errorThrown);
+        $('#results').text('Error: ' + jqXHR.responseText);
       },
     });
   });
