blaster: Optionally transcode binary object attributes to images
in a format displayable in a browser.

--- a/opendiamond/blaster/templates/testui/results.html
+++ b/opendiamond/blaster/templates/testui/results.html
@@ -115,7 +115,7 @@ $(function() {
       var thumbnail = data['thumbnail.jpeg'];
       var url;
       if (thumbnail) {
-        url = thumbnail.url;
+        url = thumbnail.image_url;
       } else {
         url = "{{ static_url('testui/unknown.png') }}";
       }
