blaster: Consolidate UI view rendering into a single handler

--- a/opendiamond/blaster/templates/testui/search.html
+++ b/opendiamond/blaster/templates/testui/search.html
@@ -236,7 +236,7 @@ $(function() {
     // Open a window to receive the search results while we still have
     // the browser's attention
     var child_window = window.open('');
-    var target_url = '/results';
+    var target_url = '{{ results_url }}';
 
     // Start the search
     var search = {
