blaster: Update statistics bar when connection closes

--- a/opendiamond/blaster/templates/testui/results.html
+++ b/opendiamond/blaster/templates/testui/results.html
@@ -110,6 +110,10 @@ $(function() {
       });
     };
 
+    sock.onclose = function() {
+      $('#statistics').append(', connection closed');
+    };
+
     sock.on('result', function(data) {
       var thumbnail = data['thumbnail.jpeg'];
       var image_url;
