blaster: Notify the client if the search fails to start

--- a/opendiamond/blaster/templates/testui/results.html
+++ b/opendiamond/blaster/templates/testui/results.html
@@ -158,6 +158,10 @@ $(function() {
           ' objects processed');
     });
 
+    sock.on('error', function(data) {
+      error(data.message);
+    });
+
     $(window).resize(update_exposed);
     $(window).scroll(update_exposed);
   }
