blaster: Have testui results view latch the first error received

--- a/opendiamond/blaster/templates/testui/results.html
+++ b/opendiamond/blaster/templates/testui/results.html
@@ -80,7 +80,7 @@ $(function() {
   }
 
   function error(text) {
-    $('#error').text(text).show();
+    $('#error:hidden').text(text).show();
   }
 
   if (status === 'e') {
