blaster: Periodically ping client; close connection if no response
If SockJS uses websockets, an AWOL client won't time out until TCP does,
which takes 15 minutes by default.  Meanwhile, the search is still
running.  Ping clients every 10 seconds and close the connection if they
haven't responded in 30.

--- a/opendiamond/blaster/templates/testui/results.html
+++ b/opendiamond/blaster/templates/testui/results.html
@@ -162,6 +162,10 @@ $(function() {
       error(data.message);
     });
 
+    sock.on('ping', function(data) {
+      sock.emit('pong');
+    });
+
     $(window).resize(update_exposed);
     $(window).scroll(update_exposed);
   }
