Substitute special placeholders in GodMode.

--- a/opendiamond/scopeserver/godmode/templates/scopeserver/godmode.html
+++ b/opendiamond/scopeserver/godmode/templates/scopeserver/godmode.html
@@ -1,5 +1,7 @@
 {% extends "scopeserver/base.html" %}
 {% block content %}
+<strong>With great power comes great responsibility.</strong>
+<br/>
 <form method="POST" action="">
 {% csrf_token %}
 <ul>
