--- a/opendiamond/scopeserver/core/templates/registration/login.html
+++ b/opendiamond/scopeserver/core/templates/registration/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form method="post" action="{% url django.contrib.auth.views.login %}">
+<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
 {% csrf_token %}
 <input type="hidden" name="next" value="{{ next }}" />
 <table>
