--- a/opendiamond/scopeserver/core/templates/scopeserver/home.html
+++ b/opendiamond/scopeserver/core/templates/scopeserver/home.html
@@ -5,7 +5,7 @@
 
 <h2>Actions:</h2>
 <ul>
-    <li><a href="{% url django.contrib.auth.views.password_change %}">Change password</a></li>
+    <li><a href="{% url 'django.contrib.auth.views.password_change' %}">Change password</a></li>
 </ul>
 
 {% endblock %}
